Fix an issue that FTP content length in download is not parsed correctly.

Instead of directly parsing content length from http header. We should
use accessor function in URLRequest and ResourceResponseHead, which gets
the content length from different URLRequestJob backends that support
multiple protocols.

Bug: 771514
Change-Id: I60d8d13ab0f12b4e0f558d6611f0129e20435ea6
Reviewed-on: https://chromium-review.googlesource.com/710334
Commit-Queue: Xing Liu <xingliu@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Reviewed-by: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508088}
Former-commit-id: dc435c7539a61437ed4aa008410806ded1e67fe9